--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,14 @@
     <modules>
         <module>DustCore</module>
         <module>DustMultiRespawn</module>
+        <module>DustDeathPenalty</module>
     </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.6</version>
+        </dependency>
+    </dependencies>
 </project>
