--- a/DustDeathPenalty/pom.xml
+++ b/DustDeathPenalty/pom.xml
@@ -4,18 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-
     <parent>
         <groupId>com.settingdust</groupId>
         <artifactId>DustSponge</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>DustMultiRespawn</artifactId>
-    <version>1.2</version>
+    <artifactId>DustDeathPenalty</artifactId>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
-    <name>DustMultiRespawn</name>
+    <name>DustDeathPenalty</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -48,6 +47,20 @@
                                 <id>attach-javadocs</id>
                                 <goals>
                                     <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.6</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
                                 </goals>
                             </execution>
                         </executions>
@@ -129,10 +142,6 @@
             <id>spongepowered-repo</id>
             <url>https://repo.spongepowered.org/maven/</url>
         </repository>
-        <repository>
-            <id>nucleuspowered</id>
-            <url>http://repo.drnaylor.co.uk/artifactory/list/minecraft</url>
-        </repository>
     </repositories>
 
     <dependencies>
@@ -145,21 +154,14 @@
         <dependency>
             <groupId>org.spongepowered</groupId>
             <artifactId>spongeapi</artifactId>
-            <version>7.1.0</version>
+            <version>7.0.0</version>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>com.settingdust</groupId>
             <artifactId>DustCore</artifactId>
             <version>1.0</version>
             <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>io.github.nucleuspowered</groupId>
-            <artifactId>nucleus-api</artifactId>
-            <version>1.9.3-S7.1</version>
         </dependency>
     </dependencies>
     <reporting>
